--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,11 @@
 [submodule "compat"]
 	path = lib/compat
 	url = https://git.sr.ht/~pkal/compat
+[submodule "consult"]
+	path = lib/consult
+	url = git@github.com:minad/consult.git
+    no-byte-compile	= consult-icomplete.el
+	no-byte-compile	= consult-selectrum.el
 [submodule "emacsql"]
 	path = lib/emacsql
 	url = git@github.com:skeeto/emacsql.git
