--- a/.gitmodules
+++ b/.gitmodules
@@ -19,6 +19,9 @@
 	path = lib/emacsql
 	url = git@github.com:skeeto/emacsql.git
     no-byte-compile = emacsql-pg.el
+[submodule "embark"]
+	path = lib/embark
+	url = git@github.com:oantolin/embark.git
 [submodule "epkg"]
 	path = lib/epkg
 	url = git@github.com:emacscollective/epkg.git
