test: Assimilate citar and dependencies
Assimilate citar             v1.0-5-g60cc30e
Assimilate citeproc           0.9.1-2-g36c4ecd
Assimilate dash               2.19.1-20-g0ac1ecf
Assimilate f                 v0.20.0-69-gd50dca4
Assimilate parsebib           4.3-1-gf87b0fd
Assimilate queue              f986fb6
Assimilate s                  1.13.0-29-ge957dcb
Assimilate string-inflection v1.0.16-5-g50ad549

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,12 @@
 [submodule "borg"]
 	path = lib/borg
 	url = git@github.com:emacscollective/borg.git
+[submodule "citar"]
+	path = lib/citar
+	url = git@github.com:emacs-citar/citar.git
+[submodule "citeproc"]
+	path = lib/citeproc
+	url = git@github.com:andras-simonyi/citeproc-el.git
 [submodule "closql"]
 	path = lib/closql
 	url = git@github.com:emacscollective/closql.git
@@ -15,6 +21,9 @@
 	url = git@github.com:minad/consult.git
     no-byte-compile	= consult-icomplete.el
 	no-byte-compile	= consult-selectrum.el
+[submodule "dash"]
+	path = lib/dash
+	url = git@github.com:magnars/dash.el.git
 [submodule "emacsql"]
 	path = lib/emacsql
 	url = git@github.com:skeeto/emacsql.git
@@ -25,6 +34,21 @@
 [submodule "epkg"]
 	path = lib/epkg
 	url = git@github.com:emacscollective/epkg.git
+[submodule "f"]
+	path = lib/f
+	url = git@github.com:rejeep/f.el.git
+[submodule "parsebib"]
+	path = lib/parsebib
+	url = git@github.com:joostkremers/parsebib.git
+[submodule "queue"]
+	path = lib/queue
+	url = git@github.com:emacsmirror/queue.git
+[submodule "s"]
+	path = lib/s
+	url = git@github.com:magnars/s.el.git
+[submodule "string-inflection"]
+	path = lib/string-inflection
+	url = git@github.com:akicho8/string-inflection.git
 [submodule "vertico"]
 	path = lib/vertico
 	url = git@github.com:minad/vertico.git
