test: Assimilate mpv v0.2.0-20-g2e0234b

--- a/.gitmodules
+++ b/.gitmodules
@@ -75,6 +75,9 @@
 [submodule "marginalia"]
 	path = lib/marginalia
 	url = git@github.com:minad/marginalia.git
+[submodule "mpv"]
+	path = lib/mpv
+	url = git@github.com:kljohann/mpv.el.git
 [submodule "nov"]
 	path = lib/nov
 	url = https://depp.brause.cc/nov.el.git
