--- a/.gitmodules
+++ b/.gitmodules
@@ -60,6 +60,9 @@
 	url = git@github.com:minad/consult.git
     no-byte-compile	= consult-icomplete.el
 	no-byte-compile	= consult-selectrum.el
+[submodule "corfu"]
+	path = lib/corfu
+	url = git@github.com:minad/corfu.git
 [submodule "dash"]
 	path = lib/dash
 	url = git@github.com:magnars/dash.el.git
