test: Assimilate hydra-related packages
Assimilate hydra            0.15.0-34-g317e1de
Assimilate major-mode-hydra 0.2.2-8-g84c1929

--- a/.gitmodules
+++ b/.gitmodules
@@ -110,6 +110,9 @@
 [submodule "hl-todo"]
 	path = lib/hl-todo
 	url = git@github.com:tarsius/hl-todo.git
+[submodule "hydra"]
+	path = lib/hydra
+	url = git@github.com:abo-abo/hydra.git
 [submodule "js2-mode"]
 	path = lib/js2-mode
 	url = git@github.com:mooz/js2-mode.git
@@ -129,6 +132,10 @@
 [submodule "magit-todos"]
 	path = lib/magit-todos
 	url = git@github.com:alphapapa/magit-todos.git
+[submodule "major-mode-hydra"]
+	path = lib/major-mode-hydra
+	url = git@github.com:jerrypnz/major-mode-hydra.el.git
+    no-byte-compile = major-mode-hydra.el
 [submodule "marginalia"]
 	path = lib/marginalia
 	url = git@github.com:minad/marginalia.git
