--- a/.gitmodules
+++ b/.gitmodules
@@ -82,6 +82,9 @@
 [submodule "embark"]
 	path = lib/embark
 	url = git@github.com:oantolin/embark.git
+[submodule "emms"]
+	path = lib/emms
+	url = git@github.com:emacsmirror/emms.git
 [submodule "epkg"]
 	path = lib/epkg
 	url = git@github.com:emacscollective/epkg.git
