test: Assimilate bibtex-completion
Assimilate biblio            0.2-23-g517ec18
Assimilate bibtex-completion 2.0.0-328-gce8c176

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,6 +37,14 @@
 [submodule "benchmark-init"]
 	path = lib/benchmark-init
 	url = git@github.com:dholm/benchmark-init-el.git
+[submodule "biblio"]
+	path = lib/biblio
+	url = git@github.com:cpitclaudel/biblio.el.git
+[submodule "bibtex-completion"]
+	path = lib/bibtex-completion
+	url = git@github.com:tmalsburg/helm-bibtex.git
+    no-byte-compile = helm-bibtex.el
+    no-byte-compile = ivy-bibtex.el
 [submodule "borg"]
 	path = lib/borg
 	url = git@github.com:emacscollective/borg.git
