--- a/.gitmodules
+++ b/.gitmodules
@@ -338,6 +338,9 @@
 	url = git@github.com:minad/vertico.git
     load-path = .
     load-path = extensions
+[submodule "visual-fill-column"]
+	path = lib/visual-fill-column
+	url = git@github.com:emacsmirror/visual-fill-column.git
 [submodule "vterm"]
 	path = lib/vterm
 	url = git@github.com:akermu/emacs-libvterm.git
