test: Assimilate rime v1.0.5-9-g3eeef9c

--- a/.gitmodules
+++ b/.gitmodules
@@ -309,6 +309,9 @@
 [submodule "request"]
 	path = lib/request
 	url = git@github.com:tkf/emacs-request.git
+[submodule "rime"]
+	path = lib/rime
+	url = git@github.com:DogLooksGood/emacs-rime.git
 [submodule "s"]
 	path = lib/s
 	url = git@github.com:magnars/s.el.git
