test: Assimilate org-superstar v1.5.0-10-g03be6c0

--- a/.gitmodules
+++ b/.gitmodules
@@ -274,6 +274,9 @@
 [submodule "org-roam-ui"]
 	path = lib/org-roam-ui
 	url = git@github.com:org-roam/org-roam-ui.git
+[submodule "org-superstar"]
+	path = lib/org-superstar
+	url = git@github.com:integral-dw/org-superstar-mode.git
 [submodule "parsebib"]
 	path = lib/parsebib
 	url = git@github.com:joostkremers/parsebib.git
