--- a/.gitmodules
+++ b/.gitmodules
@@ -268,6 +268,9 @@
 [submodule "org-contrib"]
 	path = lib/org-contrib
 	url = git@github.com:emacsmirror/org-contrib.git
+[submodule "org-download"]
+	path = lib/org-download
+	url = git@github.com:abo-abo/org-download.git
 [submodule "org-mru-clock"]
 	path = lib/org-mru-clock
 	url = git@github.com:unhammer/org-mru-clock.git
