refactor: use borg instead of package.el

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,27 @@
-elpa/
-eln-cache/
+/elpa/
+/eln-cache/
 package-quickstart.el
 package-quickstart.elc
 recentf
-.cache/
+/.cache/
 history
 org-roam.db
 bookmarks
 .org-id-locations
 places
-site-lisp/
-transient/
+/site-lisp/
+/transient/
 .lsp-session-v1
-emms/
-rime/
-private/
+/emms/
+/rime/
+/private/
 url/
 mydictionaryfr-en
-multisession/
+/multisession/
 .mc-lists.el
-request/
-xenops/
-auto-save-list/
+/request/
+/xenops/
+/auto-save-list/
 nov-places
 /epkgs/
 
