--- a/.gitmodules
+++ b/.gitmodules
@@ -23,11 +23,13 @@
 	url = git@github.com:jwiegley/emacs-async.git
 [submodule "auctex"]
 	path = lib/auctex
-	url = git@github.com:emacsmirror/auctex.git
+	url = https://git.savannah.gnu.org/git/auctex.git
 	build-step = ./autogen.sh
-	build-step = ./configure --with-texmf-dir=$HOME/texmf
+	build-step = ./configure
 	build-step = make
-	build-step = sudo make install    
+	build-step = make install
+    build-step = "(borg-update-autoloads \"auctex\")"
+	info-path = doc    
 [submodule "auto-yasnippet"]
 	path = lib/auto-yasnippet
 	url = git@github.com:abo-abo/auto-yasnippet.git
