--- a/.gitmodules
+++ b/.gitmodules
@@ -367,6 +367,9 @@
 [submodule "svg-lib"]
 	path = lib/svg-lib
 	url = https://github.com/rougier/svg-lib.git
+[submodule "svg-tag-mode"]
+	path = lib/svg-tag-mode
+	url = git@github.com:Elilif/svg-tag-mode.git
 [submodule "tablist"]
 	path = lib/tablist
 	url = git@github.com:politza/tablist.git
