--- a/.gitmodules
+++ b/.gitmodules
@@ -278,6 +278,9 @@
 [submodule "org-download"]
 	path = lib/org-download
 	url = git@github.com:abo-abo/org-download.git
+[submodule "org-fragtog"]
+	path = lib/org-fragtog
+	url = git@github.com:io12/org-fragtog.git
 [submodule "org-mru-clock"]
 	path = lib/org-mru-clock
 	url = git@github.com:unhammer/org-mru-clock.git
