--- a/.gitmodules
+++ b/.gitmodules
@@ -281,6 +281,9 @@
 [submodule "org-fragtog"]
 	path = lib/org-fragtog
 	url = git@github.com:io12/org-fragtog.git
+[submodule "org-inline-pdf"]
+	path = lib/org-inline-pdf
+	url = git@github.com:Elilif/org-inline-pdf.el.git
 [submodule "org-mru-clock"]
 	path = lib/org-mru-clock
 	url = git@github.com:unhammer/org-mru-clock.git
