chore: Assimilate an and wgrep
Assimilate ag    0.48-1-ged7e320
Assimilate wgrep 2.3.2-17-gf9687c2

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "ace-window"]
 	path = lib/ace-window
 	url = git@github.com:abo-abo/ace-window.git
+[submodule "ag"]
+	path = lib/ag
+	url = git@github.com:Wilfred/ag.el.git
 [submodule "aio"]
 	path = lib/aio
 	url = git@github.com:skeeto/emacs-aio.git
@@ -400,6 +403,9 @@
 	build-step = cd build && cmake .. && make
 	build-step = borg-byte-compile
     build-step = borg-update-autoloads
+[submodule "wgrep"]
+	path = lib/wgrep
+	url = git@github.com:mhayashi1120/Emacs-wgrep.git
 [submodule "which-key"]
 	path = lib/which-key
 	url = git@github.com:justbur/emacs-which-key.git
