--- a/.gitmodules
+++ b/.gitmodules
@@ -372,6 +372,9 @@
 [submodule "skewer-mode"]
 	path = lib/skewer-mode
 	url = git@github.com:skeeto/skewer-mode.git
+[submodule "smart-mark"]
+	path = lib/smart-mark
+	url = git@github.com:victorteokw/smart-mark.git
 [submodule "smartparens"]
 	path = lib/smartparens
 	url = git@github.com:Fuco1/smartparens.git
