--- a/.gitmodules
+++ b/.gitmodules
@@ -229,6 +229,9 @@
 [submodule "markdown-mode"]
 	path = lib/markdown-mode
 	url = git@github.com:jrblevin/markdown-mode.git
+[submodule "mathpix"]
+	path = lib/mathpix
+	url = git@github.com:jethrokuan/mathpix.el.git
 [submodule "mindre-theme"]
 	path = lib/mindre-theme
 	url = git@github.com:Elilif/mindre-theme.git
